--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -70,6 +70,7 @@
         "cfenv": "cpp",
         "cinttypes": "cpp",
         "typeindex": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "unordered_set": "cpp"
     }
 }
